--- a/Features/Features.ipynb
+++ b/Features/Features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 150,
    "metadata": {
     "id": "LXFiE36Iiy9o"
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 151,
    "metadata": {
     "id": "AGZPCf4SVV90"
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 152,
    "metadata": {
     "id": "bV4CuYHliy93"
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 153,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 154,
    "metadata": {
     "id": "PSsdxnWLeRSa"
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 155,
    "metadata": {
     "id": "odP5l-y-ea6u"
    },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 156,
    "metadata": {
     "id": "dG5cIJwfg-HU"
    },
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 157,
    "metadata": {
     "id": "RYLzLvQVrZEK"
    },
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 158,
    "metadata": {
     "id": "CV6St44AXMeb"
    },
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 159,
    "metadata": {
     "id": "IK8KFVKWiy95"
    },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 160,
    "metadata": {
     "id": "Hle8qcmziy94"
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 161,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -305,7 +305,7 @@
        "Name: Stage, dtype: int64"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 162,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -337,7 +337,7 @@
        "Name: Stage, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 163,
    "metadata": {
     "id": "kMjNV0o6iy97"
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 164,
    "metadata": {
     "id": "upzFTyzriy97"
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 165,
    "metadata": {
     "id": "q3lZxfUpiy98"
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 166,
    "metadata": {
     "id": "gPembxyCiy98"
    },
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 167,
    "metadata": {
     "id": "01aI_Vn2iy98"
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 168,
    "metadata": {
     "id": "e8AXEKvTiy99"
    },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 169,
    "metadata": {
     "id": "hBWHJU1Uiy99"
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 170,
    "metadata": {
     "id": "BrxMi0oCiy96"
    },
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 171,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -503,7 +503,7 @@
        "Name: Target, Length: 16883, dtype: int32"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 172,
    "metadata": {
     "id": "_g8Oz45Miy9-"
    },
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 173,
    "metadata": {
     "id": "83qCpSewNQcj"
    },
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 174,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -573,7 +573,7 @@
        "Name: Opportunity_Created_Date, Length: 16883, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 175,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -610,7 +610,7 @@
        "Name: Opportunity_Created_Date, Length: 2551, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 175,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 176,
    "metadata": {
     "id": "fO1Y61bsNjvU"
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 177,
    "metadata": {
     "id": "jfudLMijm4Jw"
    },
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 178,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -696,7 +696,7 @@
        "True"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 179,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -723,7 +723,7 @@
        "True"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 180,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -750,7 +750,7 @@
        "True"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,6 +911,50 @@
     "test['Diferencia_Fecha_modificacion_y_presupuesto'] = test['Quote_Expiry_Date'] - test['Last_Modified_Date']\n",
     "test_kaggle['Diferencia_Fecha_modificacion_y_presupuesto'] = test_kaggle['Quote_Expiry_Date'] - test_kaggle['Last_Modified_Date']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aprobacion de Codigo Burocratico (Aprobacion menos necesidad de aprobacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['Approval_Need'] = train['Bureaucratic_Code_0_Approved'] - train['Bureaucratic_Code_0_Approval']\n",
+    "test['Approval_Need'] = test['Bureaucratic_Code_0_Approved'] - test['Bureaucratic_Code_0_Approval']\n",
+    "test_kaggle['Approval_Need'] = test_kaggle['Bureaucratic_Code_0_Approved'] - test_kaggle['Bureaucratic_Code_0_Approval']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -930,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 192,
    "metadata": {
     "id": "FLtgDP4iZFuN"
    },
@@ -955,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 193,
    "metadata": {
     "id": "8jmtin0EaJOx"
    },
@@ -979,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1035,22 +1079,193 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Quote_Expiry_Date y USD_Total_Amount dividido Account_Name"
+    "### ASP por USD Total Amount"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train['Expiry_Dividido_Account'] = train['Quote_Expiry_Date']/train['Account_Name']\n",
-    "# train['TotalAmount_Dividido_Account'] = train['USD_Total_Amount']/train['Account_Name']\n",
-    "# test['Expiry_Dividido_Account'] = test['Quote_Expiry_Date']/test['Account_Name']\n",
-    "# test['TotalAmount_Dividido_Account'] = test['USD_Total_Amount']/test['Account_Name']\n",
-    "# test_kaggle['Expiry_Dividido_Account'] = test_kaggle['Quote_Expiry_Date']/test_kaggle['Account_Name']\n",
-    "# test_kaggle['TotalAmount_Dividido_Account'] = test_kaggle['USD_Total_Amount']/test_kaggle['Account_Name']"
+    "train['ASP_por_USD'] = train['ASP']*train['USD_Total_Amount']\n",
+    "test['ASP_por_USD'] = test['ASP']*test['USD_Total_Amount']\n",
+    "test_kaggle['ASP_por_USD'] = test_kaggle['ASP']*test_kaggle['USD_Total_Amount']"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ventas exitosas por producto por mes (Estimacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['Exitos_por_producto_mes'] = train['Ventas_Producto_por_Mes'] * train['Product_Name']\n",
+    "test['Exitos_por_producto_mes'] = test['Ventas_Producto_por_Mes'] * test['Product_Name']\n",
+    "test_kaggle['Exitos_por_producto_mes'] = test_kaggle['Ventas_Producto_por_Mes'] * test_kaggle['Product_Name']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ventas exitosas por producto por año (Estimacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['Exitos_por_producto_anio'] = train['Ventas_Producto_por_Anio'] * train['Product_Name']\n",
+    "test['Exitos_por_producto_anio'] = test['Ventas_Producto_por_Anio'] * test['Product_Name']\n",
+    "test_kaggle['Exitos_por_producto_anio'] = test_kaggle['Ventas_Producto_por_Anio'] * test_kaggle['Product_Name']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ventas exitosas por persona por mes (Estimacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['Exitos_por_persona_mes'] = train['Ventas_Persona_por_Mes'] * train['Account_Name']\n",
+    "test['Exitos_por_persona_mes'] = test['Ventas_Persona_por_Mes'] * test['Account_Name']\n",
+    "test_kaggle['Exitos_por_persona_mes'] = test_kaggle['Ventas_Persona_por_Mes'] * test_kaggle['Account_Name']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ventas exitosas por persona por año (Estimacion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['Exitos_por_persona_anio'] = train['Ventas_Persona_por_Anio'] * train['Account_Name']\n",
+    "test['Exitos_por_persona_anio'] = test['Ventas_Persona_por_Anio'] * test['Account_Name']\n",
+    "test_kaggle['Exitos_por_persona_anio'] = test_kaggle['Ventas_Persona_por_Anio'] * test_kaggle['Account_Name']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aprobacion Codigo Burocratico por Region"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train['Aprobacion_por_Region'] = train['Approval_Need'] * train['Region']\n",
+    "test['Aprobacion_por_Region'] = test['Approval_Need'] * test['Region']\n",
+    "test_kaggle['Aprobacion_por_Region'] = test_kaggle['Approval_Need'] * test_kaggle['Region']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1061,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 206,
    "metadata": {
     "id": "ALfUY-81vUC4"
    },
@@ -1141,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 208,
    "metadata": {
     "id": "aXCniDuTHnGf"
    },
@@ -1173,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 209,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1188,7 +1403,7 @@
        "0"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 210,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
