--- a/Features/Features.ipynb
+++ b/Features/Features.ipynb
@@ -857,7 +857,7 @@
    "outputs": [],
    "source": [
     "train['Ventas_Producto_por_Mes'] = contar_ventas_producto_mes(train)\n",
-    "test['Ventas_Producto_por_Mes'] = contar_ventas_producto_mes(test)\n",
+    "test['Ventas_Producto_por_Mes'] = contar_ventas_producto_m\\itemes(test)\n",
     "test_kaggle['Ventas_Producto_por_Mes'] = contar_ventas_producto_mes(test_kaggle)"
    ]
   },
@@ -929,39 +929,6 @@
     "test['Approval_Need'] = test['Bureaucratic_Code_0_Approved'] - test['Bureaucratic_Code_0_Approval']\n",
     "test_kaggle['Approval_Need'] = test_kaggle['Bureaucratic_Code_0_Approved'] - test_kaggle['Bureaucratic_Code_0_Approval']"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1169,108 +1136,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Aprobacion Codigo Burocratico por Region"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 202,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train['Aprobacion_por_Region'] = train['Approval_Need'] * train['Region']\n",
-    "test['Aprobacion_por_Region'] = test['Approval_Need'] * test['Region']\n",
-    "test_kaggle['Aprobacion_por_Region'] = test_kaggle['Approval_Need'] * test_kaggle['Region']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Reordenamos las columnas"
    ]
   },
@@ -1445,20 +1310,6 @@
     "test_kaggle.to_csv('data_test_kaggle.csv', index=False)\n",
     "#files.download('data_test_kaggle.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
